# my-api

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 22d9fa2f7d49_.py  5d7d924b19bb_.py  8bc3682aed6b_.py  aaeb159bf4d7_.py  b58f2f1e7c14_.py  b5f8aaee9aff_.py  be96926a454a_.py  fc57080cc7bf_.py
my_api/: app.py  models.py  schemas.py  security.py
my_api/configs/: configs.py
my_api/infra/auth/: security.py
my_api/infra/database/: database.py
my_api/modules/auth/: auth.py
my_api/modules/investments/: investments.py
my_api/modules/investments/calcs/: juros_compostos_routes.py
my_api/modules/investments/schemas/: calc_juros_compostos_schema.py  investments_schema.py
my_api/modules/investments/utils/: CalcRendimentosJurosCompostos.py  ConvertTax.py
my_api/modules/tibia/: tibia.py
my_api/modules/users/: users.py
my_api/routes/investments/: investments.py
my_api/routes/tibia/: tibia.py
my_api/types/enums/: vocation_enum.py
my_api/utils/: __init__.py  get_current_datetime.py
tests/: conftest.py  factories.py  test_db.py  test_tibia_route.py
tests/investments/: test_investment_routes.py
tests/investments/calcs/: test_juros_compostos_routes.py
tests/investments/utils/: test_convert_tax.py
tests/modules/investments/: test_investment_routes.py
tests/modules/tibia/: test_tibia_route.py
tests/modules/users/: test_users.py
tests/src/: test_app.py  test_auth.py  test_security.py  test_tibia_route.py  test_users.py
(+3 files in other folders)
